--- a/style.css/style.css
+++ b/style.css/style.css
@@ -17,6 +17,7 @@
 .berh1 {
     font-size: 36px;
     margin-bottom: 16px;
+    
 }
 
 #and {
@@ -48,6 +49,9 @@
 }
 
 #Featured{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    margin: 20px;
     
 }
 
@@ -56,7 +60,8 @@
     padding: 20px;
     border: 2px solid rgb(205, 193, 255);
     border-radius: 12px;
-    width: 50%;
+    /* width: 50%; */
+    box-shadow: 3px 3px 2px rgb(242, 249, 255);
 }
 .cardimgtra{
     width: 100%;
@@ -67,6 +72,23 @@
     margin: 10px;
     padding: 10px;
     border-radius: 12px 4px 12px 4px;
+    border-color: violet;
+    background-color: rgb(255, 204, 225);
     font-size: 16px;
     font-weight: 600;
+}
+.cardimgtra2 {
+    margin: 16px;
+    padding: 20px;
+    width: 35%;
+    border-radius: 12px;
+    margin-bottom: 16px;
+    
+}
+.lifestyle{
+    margin: 20px;
+    border: 2px solid rgb(162, 148, 249);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
