--- a/style.css/style.css
+++ b/style.css/style.css
@@ -51,17 +51,19 @@
 #Featured{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
-    margin: 20px;
+    /* justify-items: center; */
+    /* margin: 20px; */
     
 }
 
 .cardimg {
     margin: 16px;
     padding: 20px;
-    border: 2px solid rgb(205, 193, 255);
+    /* border: 2px solid rgb(205, 193, 255); */
+    background-color:rgb(245, 239, 255);
     border-radius: 12px;
     /* width: 50%; */
-    box-shadow: 3px 3px 2px rgb(242, 249, 255);
+    box-shadow:3px 3px 3px 2px rgb(94, 104, 109);
 }
 .cardimgtra{
     width: 100%;
@@ -78,17 +80,54 @@
     font-weight: 600;
 }
 .cardimgtra2 {
-    margin: 16px;
-    padding: 20px;
-    width: 35%;
     border-radius: 12px;
-    margin-bottom: 16px;
-    
+    width: 25%; 
+    /* height: 500px; */
 }
 .lifestyle{
     margin: 20px;
-    border: 2px solid rgb(162, 148, 249);
+    padding: 12px;
+    background-color: rgb(245, 239, 255);
+    border: 2px solid rgb(245, 239, 255);
+    box-shadow:3px 3px 3px 2px rgb(94, 104, 109);
+    border-radius: 12px;
     display: flex;
-    justify-content: center;
+    justify-content:space-around;
     align-items: center;
+}
+.Lifestyle2{
+    margin: 10px;
+    padding: 10px;
+    border-radius: 12px 4px 12px 4px;
+    border-color: rgb(162, 148, 249);
+    background-color: rgb(229, 217, 242);
+    font-size: 16px;
+    font-weight: 600;
+}
+.health{
+    margin: 10px;
+    padding: 10px;
+    border-radius: 12px 4px 12px 4px;
+    border-color: rgb(240, 168, 208);
+    background-color: rgb(255, 227, 227);
+    font-size: 16px;
+    font-weight: 600;
+}
+.technolgy{
+    margin: 10px;
+    padding: 10px;
+    border-radius: 12px 4px 12px 4px;
+    border-color: rgb(77, 109, 227);
+    background-color: rgb(199, 238, 255);
+    font-size: 16px;
+    font-weight: 600;
+}
+.food{
+    margin: 10px;
+    padding: 10px;
+    border-radius: 12px 4px 12px 4px;
+    border-color: rgb(141, 73, 58);
+    background-color: rgb(208, 184, 168);
+    font-size: 16px;
+    font-weight: 600;
 }
